94389: Fix icon alignment & dropdown styles

--- a/src/app/shared/dso-page/dso-edit-menu/dso-edit-expandable-menu-section/dso-edit-menu-expandable-section.component.scss
+++ b/src/app/shared/dso-page/dso-edit-menu/dso-edit-expandable-menu-section/dso-edit-menu-expandable-section.component.scss
@@ -24,3 +24,7 @@ ul.dropdown-menu {
         color: var(--bs-btn-link-disabled-color);
     }
 }
+
+.dso-edit-menu-dropdown {
+  max-width: calc(min(600px, 75vw));
+}
