--- a/src/styles/_global-styles.scss
+++ b/src/styles/_global-styles.scss
@@ -93,7 +93,8 @@ ngb-modal-backdrop {
 
 }
 
-ul.dso-edit-dropdown-menu li.nav-item ng-deep a.nav-link {
+ul.dso-edit-menu-dropdown > li .nav-item.nav-link {
+  // ensure that links in DSO edit menu dropdowns are unstyled (li elements are styled instead to support icons)
   padding: 0;
   display: inline;
 }
